syntax = 'proto3';

service NumStore {
rpc SetNum(SetNumRequest) returns (SetNumResponse);
rpc Fact(FactRequest) returns (FactResponse);
}
message SetNumRequest{
	int32 value=1;
    string key=2;
}
message SetNumResponse{
	int32 total=2;
}
message FactRequest{
	string key=1;
}
message FactResponse{
	int32 value=3;
	bool hit=5;
	string error=1;
}
